added start section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
+        <div class="topScores" id="highScores" >
+            <a href="topScores.html">
+                View High Scores
+            </a>
+        </div>
+        <div class="countdown" id="clock" >Time: 
+            <span id="time">
+                60
+            </span>
+        </div>
+
+        <section class="start" id="quiz" >
+            <h1>
+                Start the Code Quiz
+            </h1>
+            <p>Start the quiz game and compare your scores compared to others</p>
+            <div class="startBtn">
+                <button id="startBtn">Start Quiz</button>
+            </div>
+        </section>   
     
+
+
 </body>
 </html>
