--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
             </div>
         </section>   
     
+        <section class="quizQuestion" id="quizQuestion">
+            <div>
+                <h2 id="question"></h2>
+                <div id="answers"></div>
+            </div>
+        </section>
+
+        <section id="responseBlock" class="responseBlock">
+            <p id="response">Incorrect</p>
+        </section>
 
 
+        <script src="./assets/js/script.js"></script>
 </body>
 </html>
