added the quiz question portion

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 
         <section class="start" id="quiz" >
             <h1>
-                Start the Code Quiz
+                Code Quiz
             </h1>
-            <p>Start the quiz game and compare your scores compared to others</p>
+            <p>Start the quiz game and compare your score against others</p>
             <div class="startBtn">
                 <button id="startBtn">Start Quiz</button>
             </div>
         </section>   
     
         <section class="quizQuestion" id="quizQuestion">
-            <div>
+            <div id="quizQuestionDiv">
                 <h2 id="question"></h2>
-                <div id="answers"></div>
+                <div id="answer"></div>
             </div>
         </section>
 
