--- a/highscore.html
+++ b/highscore.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,18 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>HighScore</title>
 </head>
+
 <body>
     <div class="highscoreSection">
         <h1>Highscores</h1>
-        <ol id="highscores"></ol>
-  
-        <a href="index.html" id="goBack"><button>Go Back</button></a>
-        <button id="clearScoreBoard">Clear Highscores</button>
-      </div>
-  
+        <ol id="highscores" class="highscores"></ol>
+        <div class="btnDiv">
+            <a href="index.html" id="goBack" class="goBack"><button>Go Back</button></a>
+            <button id="clearScoreBoard" class="clear">Clear Highscores</button>
+        </div>
+    </div>
+
     <script src="./assets/js/highscore.js"></script>
 </body>
+
 </html>
